<resources>
    <string name="app_name">CommerceApp</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="search_product">Search Product</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="strike_price"><strike>$534,33</strike></string>
    <string name="detail_desc">The Nike Air Max 270 React ENG combines a full-length React foam midsole with a 270 Max Air unit for unrivaled comfort and a striking visual experience.</string>
    <string name="product_image">Product Image</string>
    <string name="discount">24%</string>
    <string name="price">$299,43</string>
    <string name="product_title">Nike Air Max 270 React ENG</string>
    <string name="specification">Specification</string>
    <string name="shown">Shown :</string>
    <string name="shown_value">Laser Blue/Anthracite</string>
    <string name="style">Style :</string>
    <string name="style_value">CD0113-400</string>
    <string name="profile">Profile</string>
    <string name="gender_icon">Gender Icon</string>
    <string name="gender">Gender</string>
    <string name="gender_value">Male</string>
    <string name="birthday_icon">Birthday Icon</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_value">12-12-2000</string>
    <string name="email_icon">Email Icon</string>
    <string name="email">Email</string>
    <string name="email_value">blotus533@gmail.com</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="phone">Phone Number</string>
    <string name="phone_value">(307) 555-0133</string>
    <string name="name">Andikasssss</string>
    <string name="username">\@rafusr</string>
    <string name="man_shirt">Man Shirt</string>
    <string name="dress">Dress</string>
    <string name="man_work_equipment">Man Work Equipment</string>
    <string name="woman_bag">Woman Bag</string>
    <string name="discount_off">Off</string>
    <string name="hello_explore_fragment">Hello, I\'m Explore Fragment</string>
    <string name="hello_offer_fragment">Hello, I\'m Offer Fragment</string>
    <string name="hello_cart_fragment">Hello, I\'m Cart Fragment</string>
</resources>