<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_nav"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search_nav"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_nav"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_offer"
        android:icon="@drawable/ic_offer_nav"
        android:title="@string/offer" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_user_nav"
        android:title="@string/account" />

</menu>