<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.andikas.commerceapp.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailActivity"
            app:destination="@id/detailActivity"
            app:enterAnim="@android:anim/linear_interpolator"
            app:exitAnim="@android:anim/linear_interpolator"
            app:popEnterAnim="@android:anim/linear_interpolator"
            app:popExitAnim="@android:anim/linear_interpolator" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.andikas.commerceapp.ui.fragments.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.andikas.commerceapp.ui.fragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_offer"
        android:name="com.andikas.commerceapp.ui.fragments.OfferFragment"
        android:label="@string/offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.andikas.commerceapp.ui.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/detailActivity"
        android:name="com.andikas.commerceapp.ui.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" />

</navigation>